fix: overflow issue

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -115,9 +115,6 @@ $theme-colors: (
 .border-radius-0 {
   border-radius: 0;
 }
-.overflow-clip {
-  overflow: clip;
-}
 .avoid-polygon1 {
   @include media-breakpoint-down(md) {
     max-width: 65%;
